--- a/Protype1/profile.html
+++ b/Protype1/profile.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>User Profile</title>
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="profile.css">
   <style>
     .sold-overlay {
@@ -68,20 +69,29 @@
     }
   </style>
 </head>
-<body>
+<body class="bg-neutral-50">
 
 <header class="top-bar">
-  <div class="logo-title">🏫 University Marketplace</div>
-  <nav class="nav-bubbles">
+  <div class="brand-group">
+    <div class="brand-logo">U</div>
+    <div class="logo-title">University Marketplace</div>
+  </div>
+  <nav class="nav-bubbles" aria-label="Main navigation">
     <a href="messages.html" class="nav-bubble">💬 Messages</a>
     <a href="index.html" class="nav-bubble">🛒 Marketplace</a>
     <a href="seller-dashboard.html" class="nav-bubble">📋 My Listings</a>
-    <a href="postitem.html" class="nav-bubble">➕ Sell Item</a>
+    <a href="postitem.html" class="nav-bubble sell-button">➕ Sell Item</a>
   </nav>
-  <div class="top-right">
-    <a href="notifications.html" class="icon-bubble">🔔 Notifications</a>
-    <a href="profile.html" class="icon-bubble active">👤 Profile</a>
-    <a href="settings.html" class="icon-bubble">⚙️ Settings</a>
+  <div class="top-actions">
+    <div class="search-container">
+      <input type="text" class="search-input" placeholder="Search" aria-label="Search">
+      <button class="search-btn" aria-label="Search">🔍</button>
+    </div>
+    <div class="top-icons">
+      <a href="notifications.html" class="icon-bubble" aria-label="Notifications">🔔</a>
+      <a href="profile.html" class="icon-bubble active" aria-label="Profile">👤</a>
+      <a href="settings.html" class="icon-bubble" aria-label="Settings">⚙️</a>
+    </div>
   </div>
 </header>
 
