--- a/Protype1/seller-dashboard.html
+++ b/Protype1/seller-dashboard.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Seller Dashboard</title>
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="seller-dashboard.css" />
   <style>
     .card-link { display:block; text-decoration:none; color:inherit; cursor:pointer; }
@@ -26,54 +27,76 @@
 </script>
 
 <header class="top-bar">
-  <div class="logo-title">🏫 University Marketplace</div>
-  <nav class="nav-bubbles">
+  <div class="brand-group">
+    <div class="brand-logo">U</div>
+    <div class="logo-title">University Marketplace</div>
+  </div>
+  <nav class="nav-bubbles" aria-label="Main navigation">
     <a href="messages.html" class="nav-bubble">💬 Messages</a>
     <a href="index.html" class="nav-bubble">🛒 Marketplace</a>
     <a href="seller-dashboard.html" class="nav-bubble active">📋 My Listings</a>
-    <a href="postitem.html" class="nav-bubble">➕ Sell Item</a>
+    <a href="postitem.html" class="nav-bubble sell-button">➕ Sell Item</a>
   </nav>
-  <div class="top-right">
-    <a href="notifications.html" class="icon-bubble">🔔 Notifications</a>
-    <a href="profile.html" class="icon-bubble">👤 Profile</a>
+  <div class="top-actions">
+    <div class="search-container">
+      <input type="text" class="search-input" placeholder="Search listings" aria-label="Search listings">
+      <button class="search-btn" aria-label="Search">🔍</button>
+    </div>
+    <div class="top-icons">
+      <a href="notifications.html" class="icon-bubble" aria-label="Notifications">🔔</a>
+      <a href="profile.html" class="icon-bubble" aria-label="Profile">👤</a>
+    </div>
   </div>
 </header>
 
-<div class="main-layout">
-  <div class="sidebar">
-    <a href="seller-dashboard.html" class="active">📊 Dashboard</a>
-    <a href="payment-methods.html">💳 Payment Methods</a>
-    <a href="settings.html">⚙️ Settings</a>
-    <a href="order-history.html">📦 Order History</a>
+<main class="page-shell">
+  <div class="dashboard-grid">
+    <div class="dashboard-nav section-card">
+      <div class="section-header">
+        <h2 class="section-title">Seller Center</h2>
+      </div>
+      <nav class="dash-links">
+        <a href="seller-dashboard.html" class="active">📊 Dashboard</a>
+        <a href="payment-methods.html">💳 Payment Methods</a>
+        <a href="settings.html">⚙️ Settings</a>
+        <a href="order-history.html">📦 Order History</a>
+      </nav>
+    </div>
+
+    <div class="dashboard-content content-stack">
+      <div class="card-grid">
+        <div class="stat-card">
+          <div class="label">Active Listings</div>
+          <div class="value" id="activeCount">0</div>
+        </div>
+        <div class="stat-card">
+          <div class="label">Items Sold</div>
+          <div class="value" id="soldCount">0</div>
+        </div>
+        <div class="stat-card">
+          <div class="label">Earnings</div>
+          <div class="value" id="earnings">$0</div>
+        </div>
+      </div>
+
+      <div class="section-card">
+        <div class="section-header">
+          <h2 class="section-title">Active Listings</h2>
+          <a href="postitem.html" class="btn-primary">Create listing</a>
+        </div>
+        <div class="listing-cards-grid" id="activeListings"></div>
+      </div>
+
+      <div class="section-card">
+        <div class="section-header">
+          <h2 class="section-title">Sold Items</h2>
+          <span class="pill">History</span>
+        </div>
+        <div class="sold-list" id="soldListings"></div>
+      </div>
+    </div>
   </div>
-
-  <div class="dashboard-content">
-    <div class="card-row">
-      <div class="metric-card">
-        <div class="metric-title">Active Listings</div>
-        <div class="metric-value" id="activeCount">0</div>
-      </div>
-      <div class="metric-card">
-        <div class="metric-title">Items Sold</div>
-        <div class="metric-value" id="soldCount">0</div>
-      </div>
-      <div class="metric-card">
-        <div class="metric-title">Earnings</div>
-        <div class="metric-value" id="earnings">$0</div>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Active Listings</h2>
-      <div class="listing-cards-grid" id="activeListings"></div>
-    </div>
-
-    <div class="section">
-      <h2>Sold Items</h2>
-      <div class="sold-list" id="soldListings"></div>
-    </div>
-  </div>
-</div>
+</main>
 
 <script>
   function getCurrentUserEmail() {
